--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,14 @@
 
 	"permissions": [
 		"activeTab",
-		"tabs",
-		"storage"
+		"alarms",
+		"storage",
+		"tabs"
 	],
+
+	"background": {
+		"scripts": ["js/background.js"]
+	},
 
 	"browser_action": {
 		"default_icon": "icons/icon.png",
