feat: add polyfill for cross browser support

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,10 @@
 	],
 
 	"background": {
-		"scripts": ["js/background.js"]
+		"scripts": [
+			"js/browser-polyfill.min.js",
+			"js/background.js"
+		]
 	},
 
 	"browser_action": {
