--- a/src/manifest-chromium.json
+++ b/src/manifest-chromium.json
@@ -1,23 +1,12 @@
 {
 	"manifest_version": 3,
 	"name": "Chartarrr!",
-	"description": "Assisting in exploratory testing on the web.",
-	"version": "0.0.1",
+	"description": "Assisting in exploratory testing on the web via session based test charters.",
+	"version": "1.0.0",
 	"icons": {
 		"48": "icons/icon.png",
 		"96": "icons/icon@2x.png"
 	},
-
-	"permissions": [
-		"activeTab",
-		"alarms",
-		"storage",
-		"tabs"
-	],
-
-	"host_permissions": [
-        "<all_urls>"
-    ],
 
 	"background": {
 		"service_worker": "js/background.js"
@@ -31,5 +20,11 @@
 		},
 		"default_popup": "popup.html",
 		"default_title": "Chartarrr!"
-	}
+	},
+
+	"permissions": [
+		"activeTab",
+		"alarms",
+		"storage"
+	]
 }
