refactor: replace minified files with non minified
- Replaced all minified files across the extension with non minified
  counterparts. This will assist in having an easier time with the
  review process on webstores for publishing, and updating.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
 
 	"background": {
 		"scripts": [
-			"js/browser-polyfill.min.js",
+			"js/browser-polyfill.js",
 			"js/helpers.js",
 			"js/background.js"
 		]
