--- a/src/manifest-chromium.json
+++ b/src/manifest-chromium.json
@@ -1,30 +1,26 @@
 {
-	"manifest_version": 3,
-	"name": "Chartarrr!",
-	"description": "Assisting in exploratory testing on the web via session based test charters.",
-	"version": "1.0.0",
-	"icons": {
-		"48": "icons/icon.png",
-		"96": "icons/icon@2x.png"
-	},
+  "manifest_version": 3,
+  "name": "Chartarrr!",
+  "description": "Assisting in exploratory testing on the web via session based test charters.",
+  "version": "1.0.0",
+  "icons": {
+    "48": "icons/icon.png",
+    "96": "icons/icon@2x.png"
+  },
 
-	"background": {
-		"service_worker": "js/background.js"
-	},
+  "background": {
+    "service_worker": "js/background.js"
+  },
 
-	"action": {
-		"default_icon": {
-			"16": "icons/icon-16.png",
-			"32": "icons/icon-32.png",
-			"64": "icons/icon-64.png"
-		},
-		"default_popup": "popup.html",
-		"default_title": "Chartarrr!"
-	},
+  "action": {
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "64": "icons/icon-64.png"
+    },
+    "default_popup": "popup.html",
+    "default_title": "Chartarrr!"
+  },
 
-	"permissions": [
-		"activeTab",
-		"alarms",
-		"storage"
-	]
+  "permissions": ["activeTab", "alarms", "storage"]
 }
