--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,41 +1,32 @@
 {
-	"manifest_version": 2,
-	"name": "Chartarrr!",
-	"description": "Assisting in exploratory testing on the web via session based test charters.",
-	"version": "1.0.0",
-	"icons": {
-		"48": "icons/icon.png",
-		"96": "icons/icon@2x.png"
-	},
+  "manifest_version": 2,
+  "name": "Chartarrr!",
+  "description": "Assisting in exploratory testing on the web via session based test charters.",
+  "version": "1.0.0",
+  "icons": {
+    "48": "icons/icon.png",
+    "96": "icons/icon@2x.png"
+  },
 
-	"background": {
-		"scripts": [
-			"js/browser-polyfill.js",
-			"js/helpers.js",
-			"js/background.js"
-		]
-	},
+  "background": {
+    "scripts": ["js/browser-polyfill.js", "js/helpers.js", "js/background.js"]
+  },
 
-	"browser_action": {
-		"default_icon": {
-			"16": "icons/icon-16.png",
-			"32": "icons/icon-32.png",
-			"64": "icons/icon-64.png"
-		},
-		"default_popup": "popup.html",
-		"default_title": "Chartarrr!"
-	},
+  "browser_action": {
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "64": "icons/icon-64.png"
+    },
+    "default_popup": "popup.html",
+    "default_title": "Chartarrr!"
+  },
 
-	"browser_specific_settings": {
-		"gecko": {
-			"id": "{b671c134-2bc6-44b9-923a-1a74de71c6c8}"
-		}
-	},
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{b671c134-2bc6-44b9-923a-1a74de71c6c8}"
+    }
+  },
 
-	"permissions": [
-		"<all_urls>",
-		"activeTab",
-		"alarms",
-		"storage"
-	]
+  "permissions": ["<all_urls>", "activeTab", "alarms", "storage"]
 }
